--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 services:
   nullboard:
-    build: ./nullboard
+    build: .
     ports:
       - 80:80
-
-  nbagent:
-    build: ./nbagent
-    ports:
-      - 10002:10001
+      - 10001:10001
     volumes:
       - ./data:/data
